--- a/.github/workflows/Calculator.yaml
+++ b/.github/workflows/Calculator.yaml
@@ -21,7 +21,7 @@ jobs:
       run: cd build && cmake ..
     - name: Compilation
       working-directory: .
-      run: cd build && make .
+      run: cd build && make
     - name: runTests
       working-directory: .
       run: cd build && ctest -V
